verphe ios horizontal scroll fixed

--- a/app/blocks/verphe/verphe.scss
+++ b/app/blocks/verphe/verphe.scss
@@ -54,7 +54,6 @@
 
     @include respond-to('tablet') {
       padding-right: 25px;
-
       &::after {
         content: '';
         position: absolute;
@@ -97,12 +96,13 @@
   &__content {
     margin-top: 30px;
     display: flex;
-    flex-flow: row wrap;
 
     @include respond-to('tablet') {
       margin-top: 7px;
       order: 1;
       flex-direction: column;
+      align-items: center;
+      max-width: 768px;
     }
 
     @include respond-to('mobile') {
@@ -160,6 +160,7 @@
 
     @include respond-to('tablet') {
       order: 2;
+      align-self: center;
     }
 
     @include respond-to('mobile') {
@@ -360,6 +361,7 @@
     @include respond-to('tablet') {
       display: block;
       padding-bottom: 15px;
+      width: 100%;
     }
 
     @include respond-to('mobile') {
